2010-05-15  Ethan A Merritt  <merritt@u.washington.edu

	* NEWS src/hidden3d.c src/plot3d.c src/graph3d.c docs/gnuplot.doc:

	Add support for 'with impulses' in hidden3d code.  Previously the manual
	said 3D impulses were drawn "from the xy plane" but the code did not
	follow this, drawing instead from zmin.  Now the 3D code always draws
	impulses from z=0 just as the 2D code always draws from y=0.

2010-05-12  Ethan A Merritt  <merritt@u.washington.edu

	* src/eval.c (magnitude):  Back-port Hans-Bernhard's fix for the
	magnitude() function from 4.5 to 4.4.
	Bugfix  #2998349

2010-05-10  Ethan A Merritt  <merritt@u.washington.edu

	* term/post.trm (PS_set_font): set ... font ",size" was not working
	for non-enhanced text.  Now it is.

	* src/plot2d.c (parametric_fixup) src/plot3d.c (parametric_3dfixup):
	Delete vestigial code for auto-generation of a parametric plot title.

2010-05-06  David Marx  <itsdmarx@users.sourceforge.net>

	* src/syscfg.c: Tweaked version of _bool support for Sun/Solaris

2010-05-06  Ethan A Merritt  <merritt@u.washington.edu

	* term/cairo.trm (cairotrm_graphics): Handle the special case of
	streaming pdfcairo output to stdout.  (Requires cairo version >= 1.2)
	Bug #578311

2010-05-02  Ethan A Merritt  <merritt@u.washington.edu

	* configure.in src/save.c src/set.c src/show.c src/unset.c src/fit.c
	src/fit.h docs/gnuplot.doc config/config.os2 config/config.wc
	config/config.nt config/config.dj2 config/config.oww config/config.cyg
	config/config.amg config/config.mgw:

	Remove conditional flag GP_FIT_ERRVARS, default to "set fit errorvar".
	Tracker item #2985752

2010-04-24  Ethan A Merritt  <merritt@u.washington.edu

	* config.mgw config.cyg config.os2:  Enable HIDDEN_QUADTREE by default.
	Tracker item #2990173

2010-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cairo.trm src/wxterminal/gp_cairo.c: Use-after-free error caused
	a segfault on certain enhanced text strings.
	Bug #2947223
